public/css/home-style.css
@import url('https://fonts.googleapis.com/css?family=Fredoka+One');

* {
	margin: 0;
	padding: 0;
  box-sizing: border-box;
}

body {
  background: url(https://source.unsplash.com/fGZ2x8wFxC0);
  background-size: cover;
  background-position: center; 
}

html {
  width: 100%;
  height: 100%;
}

#solve {
	font-family: cursive;
	font-size: 4em;
	font-weight: bolder;
  line-height: 1.2;
	padding: 0.5em;
  color: black;
  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
  0px 8px 13px rgba(0,0,0,0.1),
  0px 18px 23px rgba(0,0,0,0.1);
}

#score, #level, #correct_ans {
  font-family: 'Fredoka One', cursive;
}

#correct_ans {
	font-size: 2em;
	color: #007bff;
}

input {
	font-family: cursive;
	text-align: center;
  width: 2em;
  font-size: 1.75em;
  font-weight: bold;
  line-height: 1.2;
  color:#007bff;
  border: none;
  border-bottom: 5px solid black;
  background: none;
  outline: none;
}

input[type=number]::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) { 
  #score {
    text-align: right;
  }
}

/* medium devices and down */
@media (max-width: 767.98px) {
  #solve {
    font-size: 2.6rem;
    font-family: 'Fredoka One', cursive;
  }

  input {
    margin: .5em;
  }
}

